# GrammarBS

./: README.md  docker-compose.yml
api/: Dockerfile  main.py  mypy.ini  open_api.py  pyproject.toml  run.py
api/models/: language_tool_models.py  text_corretion_models.py  text_rewrite_models.py
api/services/: advisor.py  rewrite_text.py  text_correction.py  text_correction_dspy.py  text_correction_language_tool.py
api/utils/: configuration.py  either.py  simplify_language_utils.py  text_correction_utils.py
client/: .env  .gitignore  Dockerfile  app.config.ts  app.vue  i18n.config.ts  nuxt.config.ts  package.json
client/assets/css/: main.css  main.scss
client/assets/css/partials/: animations.css  typography.css
client/assets/models/: commands.ts  text-correction.ts
client/assets/services/: CommandBus.ts
client/components/: advisor-view.vue  correction-panel.vue  grammar-editor.vue  problems-panel.vue  rewrite-view.vue  select-menu-localized.vue  text-editor.vue  tool-panel.vue
client/composables/: useApiFetch.ts  useCommandBus.ts  useConfig.ts  useErrorDialog.ts  useProgressIndication.ts
client/server/api/: advice.post.ts  correct.post.ts  rewrite.post.ts
client/server/utils/: safeFetch.ts
client/utils/: correction-mark.ts
docker/languagetool/: Dockerfile  download_ngrams.sh
scripts/: Load-EnvFile.ps1  build-api.ps1  build-client.ps1  create-language-tool-docker.ps1  create_network.ps1  language-tool-docker.ps1  remove-api.ps1  remove-client.ps1  rerun-api.ps1  rerun-client.ps1  run-api.ps1  run-client.ps1  run-llm.ps1  test.ps1
