[tool.pyright]
venvPath = "."
pythonPath = "python"
pythonVersion = "3.13"
include = ["api"]
extraPaths = ["."]

[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "mypy>=1.14.1",
    "openai>=1.61.0",
    "python-dotenv>=1.0.1",
    "types-setuptools>=75.8.0.20250110",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
indent-width = 4
